<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">email@email.com</string>
    <string name="login_btn">LOGIN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="text_create_account">Create an account</string>
    <string name="password_text">Password</string>
    <string name="password_hint">*****</string>
    <string name="hello">Hello,</string>
    <string name="email">Email</string>
    <string name="create_your_account">Create your account</string>
    <string name="app_name_splash">Tasks.</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="recover_your_account">Recover your account</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="recover_btn">SEND EMAIL</string>
</resources>