<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.auth.RecoverFragment">

    <LinearLayout
        android:id="@+id/linear_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_500" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_recover_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/recover_your_account"
                android:textColor="@color/light_pink"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_recover_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/type_your_email_address"
                android:textColor="@color/off_white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_recover_title" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_recover_info" />


            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:elevation="2dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/recover_btn"
                android:textColor="@color/green_500"
                android:textSize="16sp"
                app:backgroundTint="@color/light_pink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/edit_email"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:indeterminateTint="@color/off_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_register_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>




</ScrollView>